--- a/src/app/auth-components/register/register.component.html
+++ b/src/app/auth-components/register/register.component.html
@@ -2,32 +2,64 @@
 <body class="hold-transition register-page">
     <div class="register-box">
       <div class="register-logo">
-        <a href="../../index2.html"><b>Admin</b>LTE</a>
+        <a><b>Clinic</b>X</a>
       </div>
     
       <div class="card">
         <div class="card-body register-card-body">
           <p class="login-box-msg">Register a new membership</p>
     
-          <form action="../../index.html" method="post">
+          <form [formGroup]="signUpForm" method="post">
             <div class="input-group mb-3">
-              <input type="text" class="form-control" placeholder="Full name">
+              <input type="text" class="form-control" placeholder="Firstname" formControlName="firstname">
               <div class="input-group-append">
                 <div class="input-group-text">
                   <span class="fas fa-user"></span>
                 </div>
               </div>
             </div>
+
             <div class="input-group mb-3">
-              <input type="email" class="form-control" placeholder="Email">
+              <input type="text" class="form-control" placeholder="Lastname" formControlName="lastname" >
+              <div class="input-group-append">
+                <div class="input-group-text">
+                  <span class="fas fa-user"></span>
+                </div>
+              </div>
+            </div>
+
+
+            <div class="input-group mb-3">
+              <input type="email" class="form-control" placeholder="Phone" formControlName="phone">
+              <div class="input-group-append">
+                <div class="input-group-text">
+                  <span class="fas fa-phone"></span>
+                </div>
+              </div>
+            </div>
+
+
+            <div class="input-group mb-3">
+              <input type="email" class="form-control" placeholder="Email" formControlName="email">
               <div class="input-group-append">
                 <div class="input-group-text">
                   <span class="fas fa-envelope"></span>
                 </div>
               </div>
             </div>
+
             <div class="input-group mb-3">
-              <input type="password" class="form-control" placeholder="Password">
+              <input type="email" class="form-control" placeholder="User Type" formControlName="userType">
+              <div class="input-group-append">
+                <div class="input-group-text">
+                  <span class="fas fa-envelope"></span>
+                </div>
+              </div>
+            </div>
+
+
+            <div class="input-group mb-3">
+              <input type="password" class="form-control" placeholder="Password"  formControlName="password">
               <div class="input-group-append">
                 <div class="input-group-text">
                   <span class="fas fa-lock"></span>
@@ -35,7 +67,7 @@
               </div>
             </div>
             <div class="input-group mb-3">
-              <input type="password" class="form-control" placeholder="Retype password">
+              <input type="password" class="form-control" placeholder="Retype password" formControlName="confirm_psw">
               <div class="input-group-append">
                 <div class="input-group-text">
                   <span class="fas fa-lock"></span>
@@ -61,10 +93,6 @@
     
           <div class="social-auth-links text-center">
             <p>- OR -</p>
-            <a href="#" class="btn btn-block btn-primary">
-              <i class="fab fa-facebook mr-2"></i>
-              Sign up using Facebook
-            </a>
             <a href="#" class="btn btn-block btn-danger">
               <i class="fab fa-google-plus mr-2"></i>
               Sign up using Google+
