--- a/src/app/auth-components/reset-password/reset-password.component.html
+++ b/src/app/auth-components/reset-password/reset-password.component.html
@@ -2,7 +2,7 @@
 <div class="hold-transition login-page">
     <div class="login-box">
       <div class="login-logo">
-        <a href="../../index2.html"><b>Admin</b>LTE</a>
+        <a href="../../index2.html"><b>Clinic</b>X</a>
       </div>
       <!-- /.login-logo -->
       <div class="card">
